syntax = "proto3";

option java_multiple_files = true;
package com.codenotfound.grpc.helloworld;

message CalculatorRequest {
    float result = 1;
}

message CalculatorReponse {
    float result2 = 1;
}

message Number {
    float value = 1;
}

service Calculator {
    rpc SquareRoot(Number) returns (Number) {}
}
